# LyricsGenreRecognition

./: .gitignore  .gitignore.swp  pyproject.toml  requirements.txt
.github/: .gitignore  copilot-instructions.md
.github/instructions/: Academic Writing.instructions.md
analysis/: 01_prepare_corpora.py  02_build_training_vocabulary.py  02_estimate_interrater_agreement.py  03_build_FS_ngram_features.py  03_replicate_FS.py  03_run_experiments.py  03_style_and_topic_modeling.py  04_classification_experiments.py  04_informed_ngram_apporach.py  04_monroe_ngram_approach.py  05_estimate_interrater_agreement.py  download_nltk_resources.py
notebooks/: fell_sporleder_2014_replication.ipynb  interrater_performance_ceiling.ipynb  prepare_corpora.ipynb
notebooks/prototyping/: X_test_stm.csv  artist_Gini_test.R  clean_lyrics.ipynb  corpus_test_replaced_toR.csv  corpus_train_replaced_toR.csv  fell_sporleder_2014_replication.ipynb  full_log_reg_fs_vs_idioms.py  interrater_performance_ceiling.ipynb  mars_test.R  modular_workflow.ipynb  prototype_fixed_models.py  prototype_tuned_stm_logreg.py  repair.ipynb  simple_LDA_approach.ipynb  stm.R  test.ipynb  test_class.ipynb  test_ctm_stm.py  tranform_stm_data.R
notebooks/reporting/: 01_prepare_corpora.ipynb  02_estimate_interrater_agreement.ipynb  03_build_FS_ngram_features.ipynb  03_replicate_FS.ipynb  04_informed_ngram_approach.ipynb  inspect_stm_results.html  (+3 more)
scripts/: inspect_monroe_ngrams.py  run_and_notify.sh  run_full_reproduction.R  run_r_and_notify.sh  setup_environment.sh  sync_overleaf_from_desktop.sh
tests/: validation.py
(+48 files in other folders)
